# blog-backend

./: .gitignore  Cargo.toml  README.md  example.env
migrations/: 20230105014731_users_table.up.sql  20230129011221_media_table.down.sql  20230129011221_media_table.up.sql  20230224024630_media_table.down.sql  20230224024630_media_table.up.sql  20230303045334_posts.down.sql  20230303045334_posts.up.sql  20230308015812_comments.down.sql  20230308015812_comments.up.sql
src/: lib.rs  main.rs  store.rs
src/middleware_hooks/: auth.rs
src/resources/: auth.rs  media.rs  mod.rs  posts.rs
src/types/: auth.rs  media.rs  mod.rs  post.rs
src/utils/: auth.rs  media.rs  mod.rs  security.rs
tests/: checkhealth_test.rs  heatlcheck.rs
