[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1" }
dotenv = { version = "0.15.0" }
jsonwebtoken = { version = "8.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.91" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.0", features = ["full"] }
